test/corpus/comment.test
==========
Shebang
==========
#!/usr/bin/env groovy
pipeline {
}
---

(source_file
  (shebang)
  (pipeline
    (closure)))

==========
Single line comment
==========
//hello
x = 5 //TODO
---

(source_file
  (comment)
  (assignment
    (identifier)
    (number_literal))
  (comment))

==========
Multiline comment
==========
/*hello
* / */
---

(source_file
  (comment))

==========
groovydoc
==========
/**
* hello world
* @param abc - thing
* @throws Exc
* @asdf ghjkl
* @return
*/
x = hi
---

(source_file
  (groovy_doc)
  (assignment
    (identifier)
    (identifier)))

==========
groovydoc with @TEXT
==========
/**
hello world
@THIS_IS_TEXT @tag
*/
---

(source_file
  (groovy_doc))

==========
Single-line groovydoc
==========
/** Utility Methods */
def foo() {}
---

(source_file
  (groovy_doc)
  (function_definition
    function: (identifier)
    parameters: (parameter_list)
    body: (closure)))

==========
Multi-line groovydoc preserved
==========
/**
 * Does a thing.
 * @param x the input
 */
def f(x) {}
---

(source_file
  (groovy_doc)
  (function_definition
    (identifier)
    (parameter_list
      (parameter
        (identifier)))
    (closure)))
